k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-devops-app
  template:
    metadata:
      labels:
        app: my-devops-app
    spec:
      containers:
      - name: my-devops-app
        image: salah3779777/my-devops-app:$BUILD_ID
        ports:
        - containerPort: 5000
