k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-devops-app
spec:
  selector:
    app: my-devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
